Implement CSR Canary 10 native shulker panel